css/main.css
/* general rules */
/* regole generiche di pagina */

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: ‘Nerko One’, cursive;
}

body {
  background-color: lightblue;
}

/* recurring rules */
/* regole ricorrenti di pagina */

.card{
  background-color: white;
  width: 140px;
  height: 170px;
  display: inline-block;
  margin: 10px;
  border: 1px solid black;
  border-radius: 5%;
  position: relative;
}


.card-type {
  color: red;
  vertical-align: middle;
  text-align: center;
  line-height: 5px;
  font-size: 18px;
  text-shadow: 2px 1px orange;
  font-weight: bold;
}

/* header/game title rules */
/* regole intestazione/titolo gioco */

header {
  text-align: center;
  vertical-align: middle;
}

header h1 {
  font-size: 55px;
  font-weight: bold;
  color: white;
  padding-top: 15px;
  text-shadow: 1px 1px gray;
}

/* main part rules */
/* regole corpo centrale pagina */

main {
  /* position: absolute;
  left: 28%;
  right: 20%; */
  padding: 20px 15% 0 26%;
}

/* card rules */
/* regole carte */

.card img {
  max-width: 100%;
  padding: 10px;
}

.overlay {
  width: 140px;
  height: 170px;
  background-image: url(../img/pattern.png);
  background-color: white;
  background-size: contain;
  position: absolute;
  z-index: 10;
  border: 1px solid black;
  border-radius: 5%;
}

.overlay:hover{
  transition-delay: 0,1s;
  display: none;
}


.card-type.static {
  color: pink;
  text-shadow: 2px 1px purple;
}

.cart-type.static:hover{
  color: red;
  text-shadow: 2px 1px orange;
}

/* credits rules */
/* regole footer */

footer div{
  text-align: center;
}

footer div span:hover{
  color: red;
}

